--- a/.github/workflows/DeployLambdaFunction.yml
+++ b/.github/workflows/DeployLambdaFunction.yml
@@ -20,8 +20,9 @@ jobs:
         users: imehedi/actions-awsscli-v2@latest
         with:
           args: "lambsa update-function-code \
-            --function-name are ........... \
-             --zip-file fileb://src/code.zip"
+            --function-name arn:aws:lambda:us-east-1:661256150182:function:TestCICDFunction \
+            --zip-file fileb://src/code.zip"
+
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
