--- a/.github/workflows/DeployLambdaFunction.yml
+++ b/.github/workflows/DeployLambdaFunction.yml
@@ -19,7 +19,7 @@ jobs:
       - name: AWS CLI v2
         users: imehedi/actions-awsscli-v2@latest
         with:
-          args: "lambsa update-function-code \
+          args: "lambda update-function-code \
             --function-name arn:aws:lambda:us-east-1:661256150182:function:TestCICDFunction \
             --zip-file fileb://src/code.zip"
 
