--- a/.github/workflows/DeployLambdaFunction.yml
+++ b/.github/workflows/DeployLambdaFunction.yml
@@ -22,8 +22,7 @@ jobs:
           args: "lambda update-function-code \
             --function-name arn:aws:lambda:us-east-1:661256150182:function:TestCICDFunction \
             --zip-file fileb://src/code.zip"
-
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ""us-west-2"
+          AWS_DEFAULT_REGION: ""us-east-1"
