--- a/.github/workflows/DeployLambdaFunction.yml
+++ b/.github/workflows/DeployLambdaFunction.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: actions./checkout@v2
       - name: Install zip tool
-        users: montudor/action-zip@v1
+        uses: montudor/action-zip@v1
       - name: Create Zip file for Lambda function
         run: cd src && zip -r code.zip .
       - name: AWS CLI v2
-        users: imehedi/actions-awsscli-v2@latest
+        uses: imehedi/actions-awsscli-v2@latest
         with:
           args: "lambda update-function-code \
             --function-name arn:aws:lambda:us-east-1:661256150182:function:TestCICDFunction \
