--- a/.github/workflows/DeployLambdaFunction.yml
+++ b/.github/workflows/DeployLambdaFunction.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           args: "lambda update-function-code \
             --function-name arn:aws:lambda:us-east-1:661256150182:function:TestCICDFunction \
-            --zip-file fileb://src/code.zip"
+            --zip-file fileb:/code.zip"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
