Add tests as a requirement

--- a/.github/workflows/checkLambdaFunction.yml
+++ b/.github/workflows/checkLambdaFunction.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          python -m pytest test/# Run tests located in teh /test directory
+          python -m pytest test/ # Run tests located in the /test directory
